<resources>
    <string name="app_name">Tahoe-LAFS</string>
    <string name="welcome">Welcome</string>
    <string name="intro_body">To get started:\n1. Start Gridsync on your computer\n2. Make sure your mobile device is connected to the same local network as the computer where you’re running Gridsync</string>
    <string name="get_started">GET STARTED</string>
    <string name="connect_your_device">Connect \nyour device</string>
    <string name="intro_scan_code_body">Press the \"Link Device\" button in Gridsync…</string>
    <string name="scan_qr_code">SCAN QR CODE</string>
    <string name="demo_grid">Demo Grid</string>
    <string name="connected_gateway_placeholder">Connected To: %s</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="disconnect_menu">Disconnect…</string>
    <string name="scan_qr_code_menu">Scan QR code…</string>
    <string name="body_text">Body 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sync_content_description">Sync button</string>
    <string name="something_went_wrong">We are unable to sync data with Grid. Please try again later.</string>
    <string name="last_updated_just_now">Last updated: Just now</string>
    <string name="download_started">   File download started…   </string>
    <string name="download_failed">   Download Failed.   </string>
    <string name="grant_download_permission">Please grant write access to save files.</string>
    <string name="download_successfully">   File downloaded successfully and is now available on your device.   </string>
</resources>